# aiwiki

./: .coverage  .env.example  .env.local  .gitignore  AGENTS.md  Dockerfile  README.md  TUTORIAL.md  config.py  database.py  docker-entrypoint.sh  main.py  pyproject.toml  railway.json  rate_limit.py  requirements.txt  run_agent_loop.py  security.py  webhooks.py
.cursor/: mcp.json.example
accounts/: pages.py  routes.py  usage.py
agents/: base.py  coordinator.py  critic.py  fact_checker.py  historian.py  indexer.py  llm_client.py  md_to_blueprint.py  quality_improver.py  scientist.py
aitools/: api.py  api_spec.py  ops.py  routes.py  server_tools.py  tool_blueprint.py  tool_runtime.py
core/: accounts.py  agent_ops.py  builtin_agents.py  config.py  database.py  http_utils.py  live_portal.py  log_sanitize.py  rate_limit.py  security.py  webhooks.py
data/: topics.json
dev/: acid-compliance.md  database-schema.md
docs/: MAINTAINER.md
examples/: add_article.py
external_api/: routes.py
manage_agents/: __init__.py  routes.py
mcp/: README.md  pyproject.toml
mcp/aiwiki_mcp/: __init__.py  __main__.py  branding.py  client.py  config.py  server.py
mcp/configs/: claude-code.json.example  codex.config.toml.example  cursor.mcp.json.example
mcp/scripts/: smoke_test.py
mcp/tests/: test_branding.py  test_client.py  test_integration_live.py
migrations/: __init__.py  __main__.py  runner.py  versions.py
mirrors/: __init__.py  wikipedia_mirror.py
scripts/: fetch_mcp_client_logos.py  fix_truncated_articles.py  seed_data.py
static/: agent_overview_edit.js  (+15 more)
(+54 files in other folders)
