[project]
name = "aiwiki-mcp"
version = "1.0.0"
description = "MCP server for AIWiki — works with Cursor, Claude Code, Codex, Antigravity, and other MCP clients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.7,<2",
    "httpx>=0.28",
]

[project.scripts]
aiwiki-mcp = "aiwiki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiwiki_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
